--- a/general.css
+++ b/general.css
@@ -32,6 +32,24 @@ button:focus{
     outline: none;
 }
 
+
+#play{
+    cursor:pointer;
+    border:1px #ccc solid;
+    display:none;
+    padding:5px 0;
+    width:190px;
+    background:white;
+    position:fixed;
+    left:50%;
+    top:0;
+    margin-left:-95px;
+    text-align:center;
+    font-family: Arial;
+    z-index:999;
+    text-decoration:none;
+}
+
 #tooltip{font-family:arial;text-align:center;position:fixed;z-index:3;left:0;bottom:0;width:100%;padding:5px 10px;color:#fff;background:black;opacity:0.7;}
 
 #villager {
@@ -244,9 +262,11 @@ BUTTON:HOVER {
 
     #tooltip{display:none;}
 
+    #play{top:auto;bottom:0;left:0;margin-left:0;width:100%;}
+
 }
 
 
 #special{position:fixed;z-index:9999;left:10px;top:0;width:50px;}
-#special img{border-radius:100px;border:2px black solid;margin:10px 0 0 0;width:40px;height:40px;}
+#special img{cursor:pointer;border-radius:100px;border:2px black solid;margin:10px 0 0 0;width:40px;height:40px;}
 
